# conways-game-of-life

./: CMakeLists.txt  LICENSE  README.md
src/: GameOfLife.cpp  GameOfLife.h  game_of_life.cpp  game_of_life.h  main.cpp
